--- a/frontend_project2/WebContent/views/login.html
+++ b/frontend_project2/WebContent/views/login.html
@@ -2,9 +2,9 @@
 	{{message}}
 	{{error.message}}
 	<form>
-		Enter Username<input type="text" ng-model=user.username"><br>
-		Enter password<input type="password" ng-moel="user.password"><br>
+		Enter Username<input type="text" ng-model="user.username"><br>
+		Enter password<input type="text" ng-model="user.password"><br>
 
-		type="text"> <input type="submit" value="login" ng-click="login()">
+	 <input type="submit" value="login" ng-click="login()">
 	</form>
 </div>
