blog list working

--- a/frontend_project2/WebContent/views/approvalform.html
+++ b/frontend_project2/WebContent/views/approvalform.html
@@ -1,5 +1,5 @@
 <div class="row">
-<div>
+
 <div class="panel panel-default">
 <div class="panel-heading">
 <div>{{blogPost.title}}</div>
@@ -7,15 +7,16 @@
 <span><strong>On:</strong>{{blogPost.postedOn | date:'medium'}}</span>
 </div>
 <div class="panel-body">{{blogPost.description}}</div>
-</div></div>
-<form>
-<input type="radio" ng-model="blogPost.approved" value="true">Approve<br>
-<input type="radio" ng-model="blogpost.approved" value="false">Reject<br>
-<button  ng-click="updateApproval()">Update Approval</button>
-</form>
-
-
-
-
-
 </div>
+</div>
+<div>
+<form>
+<br><br><input type="radio" ng-model="blogPost.approved" value="true">Approve<br>
+<br><br><input type="radio" ng-model="blogPost.approved" value="false">Reject<br>
+<button class="btn btn-default" ng-click="updateApproval()">Update Approval</button>
+</form></div>
+
+
+
+
+
