--- a/frontend_project2/WebContent/views/blogpostform.html
+++ b/frontend_project2/WebContent/views/blogpostform.html
@@ -3,7 +3,7 @@
 <table>
 <tr>
 <td>Enter Blog Title</td>
-<td><input ng-model="blogpost.title"></td>
+<td><input ng-model="blogPost.title"></td>
 
 </tr>
 <tr>
