--- a/frontend_project2/WebContent/views/suggestedusers.html
+++ b/frontend_project2/WebContent/views/suggestedusers.html
@@ -6,18 +6,11 @@
 </thead>
 <tbody>
 <tr ng-repeat="user in suggestedUsers">
-<td>{{user.firstname}}</td><td>{{user.lastname}}</td><td>{{user.online}}</td>
+<td>{{user.firstname}}</td><td>{{user.lastname}}</td><td>{{user.role}}</td>
 <td ng-if="user.online">Yes</td>
 <td ng-if="!user.online">No</td>
 
 <td><a href="" ng-click="friendrequest(user.username)" class="btn btn-default">Send Friend Request</a></td>
 </tr>
-
-
-
 </tbody>
-
-
-
-
 </table>
