--- a/frontend_project2/WebContent/views/pendingrequests.html
+++ b/frontend_project2/WebContent/views/pendingrequests.html
@@ -1,7 +1,9 @@
 <div class ="container">
 <table class="table">
 <tr ng-repeat="pr in listOfPendingRequests">
-<td>{{pr.fromId}}</td><td><a href="" ng-click="updatePendingRequests(fromId,'A')" class="btn btn-default">Accept</a>
+<td>{{pr.fromId}}</td>
+<td><img src="http://localhost:8080/backend_project2/getimage/{{pr.fromId}}" height="50" width="50"></td>
+<td><a href="" ng-click="updatePendingRequests(fromId,'A')" class="btn btn-default">Accept</a>
 <td><a href=""ng-click="updatePendingRequest(pr.fromId,'D')" class="btn btn-default">Reject</a></td>
 </tr>
 
