with new changed and errors rectified

--- a/frontend_project2/WebContent/views/jobtitles.html
+++ b/frontend_project2/WebContent/views/jobtitles.html
@@ -21,6 +21,7 @@ Search<input ng-model="jobTitle">
 <b>Yrs of Experience :</b> {{job.yrsOfExp}}<br>
 <b>Location : </b>{{job.location}}<br>
 <b>Salary : </b>{{job.Salary}}<br>
-<b>Company Name : </b>{{job.companyName}}<br>
+<b>Company Name : </b>{{job.company}}<br>
+<p>{{job.jobDescription}}</p>
 </div>
 </div>
